--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
@@ -73,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header12 cid-se4vyFjI1z mbr-parallax-background" id="header12-5">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header12 cid-se4vyFjI1z mbr-parallax-background" id="header12-5">
 
     
 
@@ -304,7 +305,7 @@ y cebolla al estilo de la India.</p>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jvJm12TOi8n8saBMe/7FHEi2gyn2y+iYU1orFHQAJ+cPw5mmeNDsEUjU5V74ZNDKVC2ySdpbyvJF1SbruPz6iwclsjEaQt2wOLWfRPyTCWWlLRPZaxOM/JeMNezcvAM6">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1qeZdRwXvk+jYTSVcw3U1RCvfPRvS7AQ51dGDoxjnPIrmtAYXoueO2XDkHnmGBzdnlHufc5uoEBwuXMZBSc36yqalyoUZRYn1X2+K9JVIsqyHvE/lk6VhDAfbRDqREln">
                     <div class="">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias por ordenar, en breve nos comunicaremos contigo.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -312,14 +313,12 @@ y cebolla al estilo de la India.</p>
                     </div>
                     <div class="dragArea row">
                         <div class="col-md col-sm-12 form-group" data-for="name">
-                            <input type="text" name="name" placeholder="Nombre" data-form-field="name" class="form-control" value="" id="name-form5-3">
+                            <input type="text" name="name" placeholder="Nombre/Numero de Contacto" data-form-field="name" class="form-control" value="" id="name-form5-3">
                         </div>
                         <div class="col-md col-sm-12 form-group" data-for="email">
                             <input type="email" name="email" placeholder="Correo" data-form-field="email" class="form-control" value="" id="email-form5-3">
                         </div>
-                        <div class="col-12 form-group" data-for="url">
-                            <input type="url" name="url" placeholder="Numero de Contacto" data-form-field="url" class="form-control" value="" id="url-form5-3">
-                        </div>
+                        
                         <div class="col-12 form-group" data-for="textarea">
                             <textarea name="textarea" placeholder="Realiza Tu Pedido" data-form-field="textarea" class="form-control" id="textarea-form5-3"></textarea>
                         </div>
@@ -388,6 +387,7 @@ y cebolla al estilo de la India.</p>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/formstyler/jquery.formstyler.js"></script>
   <script src="assets/formstyler/jquery.formstyler.min.js"></script>
@@ -397,5 +397,6 @@ y cebolla al estilo de la India.</p>
   
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
